--- a/plugins/jsolr/dspace/language/en-GB/en-GB.plg_jsolr_dspace.ini
+++ b/plugins/jsolr/dspace/language/en-GB/en-GB.plg_jsolr_dspace.ini
@@ -19,6 +19,8 @@ PLG_JSOLR_DSPACE_FIELD_EXCLUDE_BUNDLES_FROM_INDEX_LABEL="Exclude Bundles from In
 PLG_JSOLR_DSPACE_FIELD_EXCLUDE_BUNDLES_FROM_INDEX_DESC="A comma-delimited list of bundle types to exclude from the index (E.g. ORIGINAL,THUMBNAIL,LICENSE). Only indexing those bundle types which are required for JSolr search results will improve performance."
 PLG_JSOLR_DSPACE_FIELD_EXCLUDE_BUNDLE_CONTENT_FROM_INDEX_LABEL="Exclude Bundle Content"
 PLG_JSOLR_DSPACE_FIELD_EXCLUDE_BUNDLE_CONTENT_FROM_INDEX_DESC="A comma-delimited list of bundle types JSolr should exclude from extracting and indexing the content of (E.g. ORIGINAL,THUMBNAIL,LICENSE). Only indexing the content those bundles which are required for JSolr search results will improve performance. IMPORTANT NOTE: If the bundle appears in "_QQ_"Exclude Bundles from Index"_QQ_", the content will also be excluded even if it is not listed here."
+PLG_JSOLR_DSPACE_FIELD_INDEXED_LABEL="Last Indexed"
+PLG_JSOLR_DSPACE_FIELD_INDEXED_DESC="The last time DSpace items were indexed. Items that have been created or modified since the last indexed date will be added to the JSolr index."
 
 PLG_JSOLR_DSPACE_ACCESS_MAPPINGS_LABEL="Access Mappings"
 PLG_JSOLR_DSPACE_ACCESS_MAPPINGS_DESC="Maps anonymous and private repository items to corresponding Joomla view levels. Changes to these values will require a re-index of all DSpace items."
