https://trello.com/c/lmigQyja Clean up controlled vocabulary tags.

--- a/plugins/jsolr/dspace/language/en-GB/en-GB.plg_jsolr_dspace.ini
+++ b/plugins/jsolr/dspace/language/en-GB/en-GB.plg_jsolr_dspace.ini
@@ -17,6 +17,10 @@ PLG_JSOLR_DSPACE_FIELD_FACETS_LABEL="Text Facets"
 PLG_JSOLR_DSPACE_FIELD_FACETS_DESC="Specify metadata text fields which should be faceted. Fields such as dates and numbers do not need to be added to this list."
 PLG_JSOLR_DSPACE_FIELD_INDEXED_LABEL="Last Indexed"
 PLG_JSOLR_DSPACE_FIELD_INDEXED_DESC="The last time DSpace items were indexed. Items that have been created or modified since the last indexed date will be added to the JSolr index."
+PLG_JSOLR_DSPACE_FIELD_FULL_TEXT_INDEXING_LABEL="Enable Indexing"
+PLG_JSOLR_DSPACE_FIELD_FULL_TEXT_INDEXING_DESC="Enable indexing of DSpace assets."
+PLG_JSOLR_DSPACE_FIELD_IGNORE_CONTROLLED_VOCABULARY_LABEL="Ignore Vocabulary Labels"
+PLG_JSOLR_DSPACE_FIELD_IGNORE_CONTROLLED_VOCABULARY_DESC="A comma-delimited list of controlled vocabulary labels to remove from indexed fields."
 
 PLG_JSOLR_DSPACE_ACCESS_MAPPINGS_LABEL="Access Mappings"
 PLG_JSOLR_DSPACE_ACCESS_MAPPINGS_DESC="Maps anonymous and private repository items to corresponding Joomla view levels. Changes to these values will require a re-index of all DSpace items."
